--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "clean-css": ">=4.1.11",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.7.12",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "async": "^3.1.0"
